# pickatool

./: .gitignore.txt  .gitmodules  README.md  mypy.ini  pyproject.toml
data/: Report Seller Amazon Caffe FY 2023.xlsx
src/eda_toolkit_mandel94.egg-info/: PKG-INFO  SOURCES.txt
src/edakit.egg-info/: PKG-INFO  SOURCES.txt
src/pickatool/: __init__.py
src/pickatool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pickatool/eda_toolkit/: __init__.py  data_handler.py  data_loader.py  service.py
src/pickatool/eda_toolkit/feature_clustering/: CollinearityHandler.py  __init__.py  _types.py  feature_clustering_implementations.py  mcaFC.py  types.py
src/pickatool/graph_toolkit/: NetworkAnalysis.py
src/pickatool/ml_toolkit/cluster/: ClusteringModel.py
src/pickatool/ml_toolkit/exceptions/: custom_errors.py
src/pickatool/ml_toolkit/predict/: RandomForestModel.py  mypy.ini
src/pickatool/ml_toolkit/visualize/: dendrogram.py
src/pickatool/stats_toolkit/: __init__.py  compute_correlation.py  stats_genius.py
src/pickatool/stats_toolkit/dimensionality_reduction/: mca.py
src/pickatool/utils/: datetime_parser.py  types.py
src/pikatool/: __init__.py  types.py
src/pikatool/eda_toolkit/: __init__.py  data_handler.py  string_handler.py
src/pikatool/eda_toolkit/feature_clustering/: CollinearityHandler.py  FeatureClusterer.py  __init__.py  mcaFC.py
src/pikatool/ml_toolkit/: __init__.py
src/pikatool/ml_toolkit/cluster/: ClusteringTask.py
src/pikatool/stats_toolkit/: __init__.py  compute_correlation.py
src/pikatool/utils/: datetime_parser.py
(+16 files in other folders)
